Adiciona teste E2E de login com AssertJ Swing