@@ -16,6 +16,7 @@
 
         <junit.version>5.10.2</junit.version>
         <mockito.version>5.11.0</mockito.version>
+        <assertj.swing.version>3.17.1</assertj.swing.version>
         <jacoco.version>0.8.12</jacoco.version>
         <pitest.version>1.17.0</pitest.version>
     </properties>
@@ -39,6 +40,13 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-inline</artifactId>
             <version>5.2.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-swing-junit</artifactId>
+            <version>${assertj.swing.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -65,6 +73,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
+                <configuration>
+                    <argLine>@{argLine} -Djava.awt.headless=false --add-opens java.base/java.util=ALL-UNNAMED</argLine>
+                </configuration>
             </plugin>
 
             <plugin>
